@@ -178,7 +178,13 @@ plain_var:
 			if (!index) {
 				zend_hash_next_index_insert(symtable1, &gpc_element, sizeof(zval *), (void **) &gpc_element_p);
 			} else {
-				zend_hash_update(symtable1, index, index_len+1, &gpc_element, sizeof(zval *), (void **) &gpc_element_p);
+				if (PG(magic_quotes_gpc) && (index!=var)) {
+					char *escaped_index = php_addslashes(index, index_len, &index_len, 0 TSRMLS_CC);
+					zend_hash_update(symtable1, escaped_index, index_len+1, &gpc_element, sizeof(zval *), (void **) &gpc_element_p);
+					efree(escaped_index);
+				} else {
+					zend_hash_update(symtable1, index, index_len+1, &gpc_element, sizeof(zval *), (void **) &gpc_element_p);
+				}
 			}
 			break;
 		}
